--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist-ssr
 *.local
 
 public/davidMartinez/dev/*
+public/lucyKushinada/dev/*
 public/mercs/dev/*
 public/drones/dev/*
 public/levels/dev/*
